--- a/changelog.txt
+++ b/changelog.txt
@@ -1,21 +1,28 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.21
+Date: 15.06.2022
+  Changes:
+    - Mod compatibility with mods that change equipment categories of
+    spidertrons
+    - Unified changelog dates format
+---------------------------------------------------------------------------------------------------
 Version: 0.2.20
-Date: 03.09.2022
+Date: 09.03.2022
   Changes:
     - Fix mod packaging error
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.19
-Date: 03.09.2022
+Date: 09.03.2022
   Changes:
     - Fix K2SE dependency loop
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.18
-Date: 03.14.2021
+Date: 14.03.2021
   Changes:
     - Changed technology of Spidertron Remote
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.17
-Date: 03.14.2021
+Date: 14.03.2021
   Changes:
     - Changed recipe of Spidertron Remote
 ---------------------------------------------------------------------------------------------------
