Processed fuel for aai-industry

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.25
+Date: 04.07.2022
+  Compatibility:
+    - Added fuel usage compatibility with AAI industry
+---------------------------------------------------------------------------------------------------
 Version: 0.2.24
 Date: 02.07.2022
   Features:
