Added fuel vehicle to lowest tiers

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.26
+Date: 07.07.2022
+  Changes:
+    - When using Krastorio2, added vehicle fuel also to lowest tiers of spidertrons
+---------------------------------------------------------------------------------------------------
 Version: 0.2.25
 Date: 04.07.2022
   Compatibility:
