Added Krastorio2 tesla coil compatibility

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.27
+Date: 15.07.2022
+  Compatibility:
+    - Added Krastorio2 tesla coil compatibility
+---------------------------------------------------------------------------------------------------
 Version: 0.2.26
 Date: 07.07.2022
   Changes:
