--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+
+---------------------------------------------------------------------------------------------------
+Version: 0.3.1
+Date: 16.11.2024
+  Compatibility:
+    - Changes fusion reactor to fission reactor in recipes for 2.0 vanilla compatibility
+---------------------------------------------------------------------------------------------------
+Version: 0.3.0
+Date: 15.11.2024
+  Compatibility:
+    - Added Space Age compatibility
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.27
 Date: 15.07.2022
